chore: Patch managment for backend and frontend codebase